Fixed ios scrolling, but requires body to be 100% height. Need to figure out what's going on with navbar on mobile'

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,7 @@ p {
 body {
 	font-size: 12px;
 	font-family: Helvetica;
+	height: 100%;
 	width: 100%;
 	color: $gold;
 }
